# optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-07-20

./: CMakeLists.txt  README.md  exclusion.c  exclusion.h  exclusions_et_cycle.c  exclusions_et_cycle.h  exclusions_et_precedences.c  exclusions_et_precedences.h  main.c  precedences_et_cycle.c  precedences_et_cycle.h
exclusion1/: CMakeLists.txt  main.c
projet/: CMakeLists.txt  main.c
