cmake_minimum_required(VERSION 3.23)
project(optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-07-20 C)

set(CMAKE_C_STANDARD 99)

add_executable(optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-07-20 main.c exclusion.c exclusion.h precedences_et_cycle.c precedences_et_cycle.h exclusions_et_precedences.c exclusions_et_precedences.h  exclusions_et_cycle.c exclusions_et_cycle.h)
